--- a/index.html
+++ b/index.html
@@ -168,9 +168,41 @@
                 <div class="timeline__block">
                     <div class="timeline__bullet"></div>
                     <div class="timeline__header">
-                        <p class="timeline__timeframe">September 2023 - Present</p>
+                        <p class="timeline__timeframe">October 2023 - Present</p>
+                        <h3 class="item-title">Djoin Id</h3>
+                        <h5>Documentation Intern</h5>
+                    </div>
+                    <div class="timeline__desc">
+                        <p>
+                            - Creating user-friendly guides for seamless cooperative navigation.<br>
+                            - Crafting detailed guides for efficient user understanding.<br>
+                            - Ensuring easy comprehension and application.
+                        </p>                        
+                    </div>
+                </div>
+
+                <div class="timeline__block">
+                    <div class="timeline__bullet"></div>
+                    <div class="timeline__header">
+                        <p class="timeline__timeframe">October 2023 - Present</p>
+                        <h3 class="item-title">PT. Kimia Farma Tbk</h3>
+                        <h5>Project Based Virtual Intern: Big Data Analytics Kimia Farma x Rakamin Academy</h5>
+                    </div>
+                    <div class="timeline__desc">
+                        <p>
+                            - Conducting data analysis and interpretation for Kimia Farma's Big Data Analytics project.<br>
+                            - Applying data analysis and SQL querying skills for a Big Data Analytics project.<br>
+                            - Aiding in crafting data-driven plans, with a particular emphasis on utilizing data storage and scheduling methods.
+                        </p>                        
+                    </div>
+                </div>
+
+                <div class="timeline__block">
+                    <div class="timeline__bullet"></div>
+                    <div class="timeline__header">
+                        <p class="timeline__timeframe">September - October 2023</p>
                         <h3 class="item-title">ID/X Partners - Rakamin Academy</h3>
-                        <h5>Data Scientist Virtual Internship</h5>
+                        <h5>Project Based Virtual Intern: Data Scientist ID/X Partners x Rakamin Academy</h5>
                     </div>
                     <div class="timeline__desc">
                         <p>
@@ -188,9 +220,9 @@
                 <div class="timeline__block">
                     <div class="timeline__bullet"></div>
                     <div class="timeline__header">
-                        <p class="timeline__timeframe">August 2023 - Present</p>
+                        <p class="timeline__timeframe">August - September 2023</p>
                         <h3 class="item-title">Kalbe Nutritionals - Rakamin Academy</h3>
-                        <h5>Data Scientist Virtual Internship</h5>
+                        <h5>Project Based Virtual Intern: Data Scientist Kalbe Nutritionals x Rakamin Academy</h5>
                     </div>
                     <div class="timeline__desc">
                         <p>
